force-app/main/default/objects/Relacion_de_Cuenta__c/Relacion_de_Cuenta__c.object-meta.xml
<CustomObject>
    <description>Objeto encargado de establecer relaciones familiares y de otra índole entre cuentas.</description>
    <label>Relación de Cuenta</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Relación de Cuenta #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaciones de Cuentas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>