force-app/main/default/objects/Relacion_de_Cuenta__c/fields/Cuenta_Principal__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Principal__c</fullName>
    <label>Cuenta Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relaciones de Cuentas</relationshipLabel>
    <relationshipName>Relaciones_de_Cuentas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>