force-app/main/default/objects/Relacion_de_Cuenta__c/fields/Cuenta_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relaciones de Cuentas (Cuenta Relacionada)</relationshipLabel>
    <relationshipName>Relaciones_de_Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>