force-app/main/default/objects/Relacion_de_Cuenta__c/fields/Depende_economicamente_de_usted__c.field-meta.xml
<CustomField>
    <fullName>Depende_economicamente_de_usted__c</fullName>
    <label>¿Depende economicamente de usted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>