force-app/main/default/objects/Relacion_de_Cuenta__c/fields/Parametro_de_Relacion__c.field-meta.xml
<CustomField>
    <fullName>Parametro_de_Relacion__c</fullName>
    <label>Parametro de Relación</label>
    <length>200</length>
    <type>Text</type>
</CustomField>