force-app/main/default/objects/Relacion_de_Cuenta__c/fields/Tipo_de_Relacion_Inversa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Relacion_Inversa__c</fullName>
    <label>Tipo de Relación Inversa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Relacion_Directa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abuela</fullName>
            </value>
            <value>
                <fullName>Abuelo</fullName>
            </value>
            <value>
                <fullName>Cónyuge</fullName>
            </value>
            <value>
                <fullName>Hermana</fullName>
            </value>
            <value>
                <fullName>Hermano</fullName>
            </value>
            <value>
                <fullName>Hija</fullName>
            </value>
            <value>
                <fullName>Hijo</fullName>
            </value>
            <value>
                <fullName>Madre</fullName>
            </value>
            <value>
                <fullName>Padre</fullName>
            </value>
            <value>
                <fullName>Representante</fullName>
            </value>
            <value>
                <fullName>Tía</fullName>
            </value>
            <value>
                <fullName>Tío</fullName>
            </value>
            <value>
                <fullName>Representado</fullName>
            </value>
            <value>
                <fullName>Nieto</fullName>
            </value>
            <value>
                <fullName>Nieta</fullName>
            </value>
            <value>
                <fullName>Sobrino</fullName>
            </value>
            <value>
                <fullName>Sobrina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>