force-app/main/default/objects/Relacion_de_Cuenta__c/recordTypes/Relacion.recordType-meta.xml
<RecordType>
    <fullName>Relacion</fullName>
    <active>true</active>
    <label>Relacion</label>
</RecordType>