force-app/main/default/objects/Relacion_de_Cuenta__c/validationRules/Valida_Cuentas_Iguales.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Cuentas_Iguales</fullName>
    <active>true</active>
    <description>Impide que se relacione Principal y Relacionada usando la misma cuenta</description>
    <errorConditionFormula>Cuenta_Principal__c ==  Cuenta_Relacionada__c</errorConditionFormula>
    <errorMessage>No se puede relacionar una cuenta consigo misma.</errorMessage>
</ValidationRule>